# pancakebatter

./: .config.sample.env  .gitignore  .sops.yaml  README.md  Taskfile.yaml  Taskfile.yml
.github/: renovate.json5
.github/workflows/: images.yaml  link-check.yaml  meta-sync-labels.yaml
.taskfiles/: AnsibleTasks.yml
ansible/: requirements.yaml
ansible/inventory/: hosts.yaml  hosts.yml
ansible/inventory/host_vars/: april.sops.yml  casey.sops.yml  donatello.sops.yml  leatherhead.sops.yml  leonardo.sops.yml  michaelangelo.sops.yml  michelangelo.sops.yml  raphael.sops.yml  shredder.sops.yml  splinter.sops.yml
ansible/playbooks/: cluster-installation.yml  cluster-misc.yml  cluster-prepare.yaml  cluster-prepare.yml  cluster-rollout-reboot.yml  misc.yml
ansible/playbooks/templates/: custom-cilium-helmchart.yaml.j2  custom-coredns-helmchart.yaml.j2  kube-vip-static-pod.yaml.j2
bootstrap/vars/: config.sample.yaml
docs/: README.md
images/: Dockerfile.jellyfin
images/jellyfin/: Dockerfile
images/port_manager/: .dockerignore  .gitignore  Dockerfile  README.md
images/port_manager/gluetun-port-mgr/: Cargo.toml
images/port_manager/gluetun-port-mgr/src/: main.rs
kubernetes/apps/default/: kustomization.yaml  namespace.yaml
kubernetes/apps/downloads/: kustomization.yaml  namespace.yaml  volume.yaml
kubernetes/apps/flux-system/: kustomization.yaml
kubernetes/apps/kube-system/: kustomization.yaml  namespace.yaml
kubernetes/apps/longhorn-system/: kustomization.yaml  namespace.yaml
kubernetes/apps/media/: kustomization.yaml
kubernetes/apps/monitoring/: kustomization.yaml  namespace.yaml
kubernetes/apps/networking/: kustomization.yaml
kubernetes/apps/rook-ceph/: namespace.yaml
kubernetes/apps/velero/: namespace.yaml
kubernetes/config/: cluster-secrets.sops.yaml
kubernetes/crds/: kustomization.yaml
kubernetes/crds/kyverno/: crds.yaml
kubernetes/crds/snapshot-controller/: crds.yaml
kubernetes/crds/volsync/: crds.yaml
kubernetes/flux/: config.yaml  crds.yaml
kubernetes/flux/config/: cluster.yaml  flux.yaml
kubernetes/flux/vars/: cluster-secrets.sops.yaml  (+1 more)
scripts/: change_pvc.sh
terraform/cloudflare/: .terraform.lock.hcl  main.tf  secret.sops.yaml
tmpl/kubernetes/: cert-manager-secret.sops.yaml  cluster-secrets.sops.yaml
(+231 files in other folders)
