[package]
name = "gluetun-port-mgr"
version = "0.4.1"
edition = "2021"
license = "MIT"

[dependencies]
# error handling
anyhow = { version = "1.0.82" }
# used for termination handling
crossbeam-channel = "0.5.12"
ctrlc = { version = "3.4.4", features = ["termination"] }
# logging
simplelog = "0.12.2"
log = "0.4.21"
# file watching
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
# request handling
ureq = { version = "3.0.0", features = ["cookies", "json", "tls"], default-features = false }
cookie_store = "0.21.0" # used to store cookies from application login
serde_json = "1.0.115"

[profile.release]
lto = true
opt-level = "s"
panic = "abort"
codegen-units = 1
strip = true
